--- a/index.html
+++ b/index.html
@@ -4,9 +4,19 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>CustomRealms IDE</title>
+    <link rel="stylesheet" href="/styles.css" />
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <div id="about">
+      <p id="intro">Create plugins with <b>TypeScript</b></p>
+      <p id="end">The end of the reign of Java</p>
+      <a href="/signup" id="about-signup">Sign up for free!</a>
+    </div>
+    <img src="img/mountain.webp" alt="Mountain" id="aboutbg" />
+    <div id="why">
+      <h2>Why?</h2>
+    </div>
+    <script src="/script.js"></script>
   </body>
 </html>
